--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>T-Executer</title>
-  <link rel="stylesheet" href="style.css" />
+  <title>T-Executer</title
+  <link rel="icon" type="image/png" href="assets/logo.png">
+  <link rel="stylesheet" href="style.css"
 </head>
 <body>
-    <header class="site-header">
-  <img src="assets/logo.png" alt="T-Executer Logo" class="site-logo">
+    <header class="t-header">
+  <h1 class="t-logo">T</h1>
+  <h2 class="t-subtitle">Executer</h2>
+</header>
+  <img src="assets/logo.png" alt="Executer Logo" class="site-logo">
   <h1 class="site-title">T-Executer</h1>
 </header>
 
@@ -52,7 +56,7 @@
 
   <div id="scriptPopup" class="popup hidden">
     <div class="popup-content">
-      <img src="backup/T-Executer web/Assets/script_gui.png" alt="Script GUI
+      <img src "/Assets/script_gui.png" alt="Script GUI
       <button class="close-btn">Close</button>
     </div>
   </div>
